 * language and i18n:
   * updated translations: Afrikaans, Chinese, Italian, Polish, Russian, Slovenian,
     Turkish
 * Campaign server
   * Changed campaign_name_legal to bar name of '.'
   * Back ported check_names_legal to be combined with an upcoming change
     that will close a vulnerability to bogus data from the campaign server.
 * multiplayer
   * multiplayer game with "empty" as side no longer causes OOS (#4464)
   * disabled 'advancefrom' in multiplayer
 * music and sound:
   * new main menu music
 * units and balancing changes:
   * removed Thug from Knalgan faction
   * Northerners can now recruit Rocklobber in Age of Heroes era
 * random map generator now uses island_size (#4458)

Version 1.0:
 * language and i18n:
   * updated manual: English, German, Swedish
   * updated man pages: Swedish
   * updated translations: Afrikaans, British English, Polish,
     Portuguese (Brazil), Slovak, Spanish
 * graphics
   * new title screen and logo
   * new portraits: Li'sar, Elvish_Shaman, Ghoul, Mermaid_Initiate,
     Merman_Fighter, Merman_Hunter, Naga-Fighter, Orcish_Assassin,
     Saurian_Skirmisher
   * new Konrad level 1 image
   * new death animation for Initiate
 * changed the map 'Snow Plains' to use snow terrain
 * campaigns:
   * Eastern Invasion
     * fix Undead fighting each other in Weldyn Besieged (#4386)
     * fix Undead not recruiting after leader change in The Crossing (#4393)
 * balancing changes:
   * decreased Dwarvish Fighter hammer attack damage from 9 to 8
   * decreased Merman Hunter experience needed to level from 38 to 35
 * multiplayer scenarios
   * revised multiplayer maps: Divide and Conquer, Sablestone Delta,
     Silverhead Crossing, Sullas Ruins, 1v1v1Hex, Charge
 * server: add administration functions

Version 1.0rc1:
 * language and i18n:
   * updated translations: Afrikaans, Bulgarian, Catalan, Finnish, German,
     Greek, Hungarian, Japanese, Portuguese (Brazil), Russian, Slovenian,
     Spanish, Turkish